Bug 1548484 - respect Cairo blit size limits when using BasicCompositor. r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D30571